# autotoolset-0.11.4

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac  configure.scan  fix-timestamp.sh  reconf
.github/workflows/: autotoolset-0.11.4.yml  codeql.yml
debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  ex.doc-base.package  info  init.d.ex  manpage.1.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
doc/: Makefile.am  Makefile.in
doc/gnits/: .gitignore  Makefile.am  Makefile.in  gnits.info  gnits.info-1  gnits.info-2  gnits.texi
doc/html/: index.css  index.shtml  rodape.shtml  toolsmanual.html  tutorial.html
doc/manual/: .gitignore  Makefile.am  Makefile.in  stamp-vti  toolsmanual.info  toolsmanual.info-1  toolsmanual.info-2  toolsmanual.info-3  toolsmanual.info-4  toolsmanual.info-5  toolsmanual.info-6  toolsmanual.info-7  toolsmanual.info-8  toolsmanual.texi  version.texi
doc/manual/toolsmanual/: Acknowledgements.html  Applications-with-Automake.html  Applying-the-GPL.html  Basic-Emacs-concepts.html  Basic-Makefile-concepts.html  Browsing-documentation.html  Building-libraries.html  Categories-of-software.html  Compiling-simple-programs.html  Compiling-with-Makefiles.html  Configuration-options.html  Configuring-GNU-Emacs.html  Confusing-words.html  Copying.html  Creating-a-LaTeX-package.html  Data-files-with-Automake.html  Dealing-with-built-sources.html  Dealing-with-header-files.html  Doing-a-VPATH-build.html  Emacs-Lisp-with-Automake.html  Embedded-text-with-Automake.html  Export-restrictions-on-encryption-software.html  Fortran-compilers-and-linkage.html  Further-reading-about-LaTeX.html  Further-reading-on-Emacs.html  GNU-Emacs-support-for-Texinfo.html  GNU-GENERAL-PUBLIC-LICENSE.html  General-Automake-principles.html  Guile-with-Automake.html  Hacker-sanity-with-Emacs.html  Handling-patches.html  Handling-version-numbers.html  Hello-world-example-with-Autoconf-and-Automake.html  Hello-world-with-acmkdir.html  Inserting-copyright-notices-with-Emacs.html  Installation-standard-directories.html  Installing-GNU-Emacs.html  Installing-GNU-software.html  Installing-a-GNU-package.html  Installing-the-GNU-build-system.html  (+50 more)
doc/notes/: .gitignore  Makefile.am  Makefile.in  build_intro.info  build_intro.texi  legal.texi  old_emacs.texi  shell.doc  writing_macros.doc  xlib.doc
doc/texinfo/: Makefile.am  Makefile.in  texinfo-refcard.ps
doc/tutorial/: .gitignore  Makefile.am  Makefile.in  acknowledgements.texi  basic_concepts.texi  copying.texi  cxx.texi  documentation.texi  fortran.texi  gnu_emacs.texi  good_code.texi  legal.texi  makefiles.texi  philosophy.texi  preface.texi  tutorial.info  tutorial.info-1  tutorial.info-2  tutorial.info-3  tutorial.info-4  tutorial.info-5  tutorial.info-6  tutorial.info-7  tutorial.info-8  tutorial.texi  using_automake_autoconf.texi  using_autotools.texi  version.texi
doc/tutorial/tutorial/: Acknowledgements.html  Building-libraries.html  Built-sources.html  C_002b_002b-and-Autoconf.html  Categories-of-software.html  Choosing-a-good-programming-language.html  Compiler-configuration-with-the-LF-macros.html  Compiling-with-Makefiles.html  Configuring-GNU-Emacs.html  Confusing-words.html  Copying.html  Copyleft_003b-Pragmatic-Idealism.html  Creating-a-LaTeX-package.html  Developing-applications.html  Developing-libraries.html  Direct-compilation.html  Enter-Makefiles.html  Fortran-compilers-and-linkage.html  Fortran-with-Autoconf.html  Free-software-is-good-software.html  Freeing-your-software.html  Further-reading-about-LaTeX.html  Further-reading-on-Emacs.html  GNU-Emacs-support-for-Texinfo.html  General-Automake-principles.html  Handling-Embedded-text.html  Handling-other-obscurities.html  Handling-patches.html  Handling-shell-scripts.html  Handling-very-deep-packages.html  Hello-World-revisited.html  Hello-world-example.html  Hello-world-revisited-again.html  Hello-world-with-an-attitude.html  Inserting-copyright-notices-with-Emacs.html  Inserting-notices-with-Emacs.html  Installation-directories_002e.html  Installing-GNU-Emacs.html  Installing-a-GNU-package.html  Installing-the-GNU-build-system.html  (+45 more)
lib/: Makefile.am  Makefile.in  long-options.c
m4/: Makefile.am  Makefile.in  lf_assert.m4  lf_bash.m4  lf_cc.m4  lf_config.m4  lf_cxx.m4  lf_envvars.m4  lf_fortran.m4  lf_host_type.m4  lf_lisp.m4  lf_local.m4  lf_nm.m4  lf_texidoc.m4  lf_txtc.m4  lf_warnings.m4  lf_x11.m4
misc/: Makefile.am  Makefile.in  autotoolset.spec.in  buildinstall.in  finalize  makerpm  makerpm.sh.in
src/: Makefile.am  Makefile.in  version.pl.in  version.sh.in
src/acconfig/: Makefile.am  Makefile.in  acconfig.pl
src/acmkdir/: .gitignore  Makefile.am  Makefile.in  acmkdir.sh  doc_makefile.am  f2c_comp.sh  m4_makefile.am
src/acmkdir/python/: MANIFEST.in  Makefile.am  Makefile.in  __init__.py  __init__.py.zope  configure.ac.zope  install_data.py  setup.cfg  setup.py  src.Makefile.am.zope  src.dtml.Makefile.am.zope  src.interfaces.Makefile.am.zope  src.www.Makefile.am.zope
src/emacs/: Makefile.am  Makefile.in  gpl-copying.el  gpl.el  texinfo-xtra.el
src/gpl/: Makefile.am  Makefile.in  gpl.sh
src/mkconfig/: Makefile.am  Makefile.in  config.txt  mkconfig.c
src/txtc/: Makefile.am  Makefile.in
